image-swap/kustomize/overlays/eng/patches/policy-mode-audit.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: all-policies
  annotations:
    policies.kyverno.io/mode: audit
spec:
  validationFailureAction: audit
