image-swap/kustomize/overlays/eng/patches/resource-limits-values.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: resource-limits-policy
spec:
  rules:
  - name: check-resource-limits
    validate:
      pattern:
        spec:
          containers:
          - resources:
              limits:
                memory: "<=512Mi"
                cpu: "<=250m"
